{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 67,
  "lineage": "315a59a5-6149-b706-d5ca-4b1713e26d65",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "annotations": {
                  "name": "jenkins"
                },
                "generation": 0,
                "labels": {
                  "mylabel": "jenkins"
                },
                "name": "jenkins",
                "resource_version": "225808",
                "uid": "6fc4c3f9-71e4-427b-8435-1b3a80a4952a"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:security-group/sg-0b62fd12b89e57e37",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b62fd12b89e57e37",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210622221238546600000009",
            "name_prefix": "all_worker_management",
            "owner_id": "553686865554",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:security-group/sg-07ca5d86392822fd9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07ca5d86392822fd9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210622221237279000000008",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "553686865554",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:security-group/sg-02402ff3f0fce3d36",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02402ff3f0fce3d36",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210622221237252400000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "553686865554",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:security-group/sg-0e0324ed242a6265b",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0324ed242a6265b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c971ead5d63161c8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aharon-eks-26Hbn35f2021062222123889590000000a",
            "name_prefix": "aharon-eks-26Hbn35f",
            "owner_id": "553686865554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "aharon-demo",
              "Name": "aharon-eks-26Hbn35f-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "aharon-demo",
              "Name": "aharon-eks-26Hbn35f-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:security-group/sg-0c971ead5d63161c8",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c971ead5d63161c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a86906eb1dab54b9a8ace843f250b782",
                "from_port": 30701,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30701
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=a86906eb1dab54b9a8ace843f250b782",
                "from_port": 31772,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31772
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "10.0.5.0/24",
                  "10.0.4.0/24",
                  "10.0.6.0/24"
                ],
                "description": "kubernetes.io/rule/nlb/health=a86906eb1dab54b9a8ace843f250b782",
                "from_port": 31535,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31535
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0324ed242a6265b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0324ed242a6265b"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "aharon-eks-26Hbn35f2021062222123892550000000b",
            "name_prefix": "aharon-eks-26Hbn35f",
            "owner_id": "553686865554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "aharon-demo",
              "Name": "aharon-eks-26Hbn35f-eks_worker_sg",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "owned"
            },
            "tags_all": {
              "Environment": "aharon-demo",
              "Name": "aharon-eks-26Hbn35f-eks_worker_sg",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4026333515",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e0324ed242a6265b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.eks.aws_security_group.cluster",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4228277443",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e0324ed242a6265b",
            "self": false,
            "source_security_group_id": "sg-0c971ead5d63161c8",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.eks.aws_security_group.cluster",
            "module.k8s-cluster.module.eks.aws_security_group.workers",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2037546015",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c971ead5d63161c8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.eks.aws_security_group.workers",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2359018967",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c971ead5d63161c8",
            "self": false,
            "source_security_group_id": "sg-0e0324ed242a6265b",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.eks.aws_security_group.cluster",
            "module.k8s-cluster.module.eks.aws_security_group.workers",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1940411638",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c971ead5d63161c8",
            "self": false,
            "source_security_group_id": "sg-0e0324ed242a6265b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.module.eks.aws_security_group.cluster",
            "module.k8s-cluster.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-646622039",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c971ead5d63161c8",
            "self": false,
            "source_security_group_id": "sg-0c971ead5d63161c8",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.eks.aws_security_group.workers",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09b14491f78702007",
            "domain": "vpc",
            "id": "eipalloc-0c3cdfeb7a71a49a9",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-096643dec57359407",
            "private_dns": "ip-10-0-4-164.eu-west-1.compute.internal",
            "private_ip": "10.0.4.164",
            "public_dns": "ec2-54-155-35-220.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.35.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-vpc-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:internet-gateway/igw-09f3bccd0a9ff0378",
            "id": "igw-09f3bccd0a9ff0378",
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3cdfeb7a71a49a9",
            "connectivity_type": "public",
            "id": "nat-03d08c300eeecd371",
            "network_interface_id": "eni-096643dec57359407",
            "private_ip": "10.0.4.164",
            "public_ip": "54.155.35.220",
            "subnet_id": "subnet-08d16d2f8baba9698",
            "tags": {
              "Name": "eks-vpc-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            }
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_eip.nat",
            "module.k8s-cluster.module.vpc.aws_internet_gateway.this",
            "module.k8s-cluster.module.vpc.aws_subnet.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7068b149f16adea1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d08c300eeecd371",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7068b149f16adea",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_subnet.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.module.vpc.aws_eip.nat",
            "module.k8s-cluster.module.vpc.aws_internet_gateway.this",
            "module.k8s-cluster.module.vpc.aws_nat_gateway.this",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.private",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f3bccd0a9ff0378",
            "id": "r-rtb-05745018c3910f0481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05745018c3910f048",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_internet_gateway.this",
            "module.k8s-cluster.module.vpc.aws_route_table.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:route-table/rtb-0b7068b149f16adea",
            "id": "rtb-0b7068b149f16adea",
            "owner_id": "553686865554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d08c300eeecd371",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-vpc-private",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-private",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:route-table/rtb-05745018c3910f048",
            "id": "rtb-05745018c3910f048",
            "owner_id": "553686865554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f3bccd0a9ff0378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-vpc-public",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-public",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b47a442ae2e90558",
            "route_table_id": "rtb-0b7068b149f16adea",
            "subnet_id": "subnet-0dbc579d2434825f3"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.private",
            "module.k8s-cluster.module.vpc.aws_subnet.private",
            "module.k8s-cluster.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21380731cd23db7",
            "route_table_id": "rtb-0b7068b149f16adea",
            "subnet_id": "subnet-00b9bda1b67aa6984"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.private",
            "module.k8s-cluster.module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038f9c126fe16b266",
            "route_table_id": "rtb-0b7068b149f16adea",
            "subnet_id": "subnet-04193b509db81e383"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.private",
            "module.k8s-cluster.module.vpc.aws_subnet.private",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021276265b31dbf54",
            "route_table_id": "rtb-05745018c3910f048",
            "subnet_id": "subnet-08d16d2f8baba9698"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.public",
            "module.k8s-cluster.module.vpc.aws_subnet.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8855c158ef7e56d",
            "route_table_id": "rtb-05745018c3910f048",
            "subnet_id": "subnet-09f1f65ea273c27de"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.public",
            "module.k8s-cluster.module.vpc.aws_subnet.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e889e4db2f0a252",
            "route_table_id": "rtb-05745018c3910f048",
            "subnet_id": "subnet-00bf7084fa776a16d"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_route_table.public",
            "module.k8s-cluster.module.vpc.aws_subnet.public",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-0dbc579d2434825f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dbc579d2434825f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-00b9bda1b67aa6984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00b9bda1b67aa6984",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-04193b509db81e383",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04193b509db81e383",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-08d16d2f8baba9698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08d16d2f8baba9698",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-09f1f65ea273c27de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09f1f65ea273c27de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.random_string.suffix",
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:subnet/subnet-00bf7084fa776a16d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-00bf7084fa776a16d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-011bb222aeb9669c2"
          },
          "dependencies": [
            "module.k8s-cluster.data.aws_availability_zones.available",
            "module.k8s-cluster.module.vpc.aws_vpc.this",
            "module.k8s-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.k8s-cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.k8s-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:553686865554:vpc/vpc-011bb222aeb9669c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e11914580d201023",
            "default_route_table_id": "rtb-088544f78b153ad7f",
            "default_security_group_id": "sg-014e4f71d8db8f87d",
            "dhcp_options_id": "dopt-e896cd8e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011bb222aeb9669c2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088544f78b153ad7f",
            "owner_id": "553686865554",
            "tags": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc",
              "kubernetes.io/cluster/aharon-eks-26Hbn35f": "shared"
            }
          },
          "dependencies": [
            "module.k8s-cluster.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}